@@ -1,0 +1,95 @@
+<?xml version="1.0"?>
+<?xml-stylesheet href="../releases.xsl" type="text/xsl"?>
+<release>
+  <module>gstreamer</module>
+  <module-fancy>GStreamer</module-fancy>
+  <name>Stuttgart (PRELIMINARY)</name>
+  <version>0.8.5</version>
+
+  <intro>
+<p>
+The GStreamer team is happy to announce a new release
+in the 0.8.x stable series of the GStreamer streaming-media framework.
+</p>
+<p>
+The 0.8.x series is a stable series aimed at end users.
+It is not API or ABI compatible with the stable 0.6.x series.
+It is, however, parallel installable with the 0.6.x series.
+</p>
+<p>
+This module only contains core functionality.  For actual media playback,
+you will need other modules.  GStreamer Plugins contains a huge set of
+additional plugins.  GStreamer FFmpeg contains a plugin based on the popular
+FFmpeg decoding library.  These modules need not have the same source version
+as the core, as long as they are in the 0.8.x series.
+</p>
+  </intro>
+  <features>
+    <feature>Parallel installability with 0.6.x series</feature>
+    <feature>Internationalization</feature>
+    <feature>New Translation: Czech (cs), Miloslav Trmac</feature>
+    <feature>New Translation: Catalan (ca), Jordi Mallach</feature>
+    <feature>Translations: af, az, cs, en_GB, fr, nl, sr, sv, tr, uk</feature>
+    <feature>gst_init () now behaves like gtk_init ()</feature>
+    <feature>queue fixes</feature>
+    <feature>ongoing win32 build integration</feature>
+    <feature>bytestream now has GstFilePad</feature>
+    <feature>gst-register is now i18n-ized</feature>
+    <feature>GstCaps XML-ization works again</feature>
+    <feature>Fixed enum GValue</feature>
+    <feature>Added GstFraction GValue</feature>
+  </features>
+
+  <applications>
+<p>
+Applications already ported to use GStreamer 0.8.x include the GNOME
+desktop components like gnome-media and nautilus-media, as well as other
+GNOME applications including sound-juicer, totem and RhythmBox.
+</p>
+  </applications>
+
+  <issues>
+    <issue>Some applications may print warnings on the console saying
+something like:
+ GStreamer-WARNING **: pad xvimagesink0:sink returned caps that are not a
+real subset of its template caps.
+
+It is safe to ignore this warning.  It will be fixed in the next release
+of the GStreamer Plugins.
+    </issue>
+  </issues>
+
+  <contributors>
+    <person>Andy Wingo</person>
+    <person>Benjamin Otte</person>
+    <person>Daniel Gazard</person>
+    <person>David Moore</person>
+    <person>David Schleef</person>
+    <person>Jan Schmidt</person>
+    <person>Joe Marcus Clarke</person>
+    <person>Johan Dahlin</person>
+    <person>Miloslav Trmac</person>
+    <person>Ronald Bultje</person>
+    <person>Sebastien Cote</person>
+    <person>Steve Lhomme</person>
+    <person>Thomas Vander Stichele</person>
+    <person>Wim Taymans</person>
+    <person>Zaheer Abbas Merali</person>
+  </contributors>
+
+  <api>
+    <additions>
+      <item>A new function, gst_scheduler_register, has been added.</item>
+      <item>A new enum member of GstBufferFlag, GST_BUFFER_DELTA_UNIT has been added.</item>
+    </additions>
+    <depreciations>
+      <item>GstBufferFlag has a deprecated enum member, GST_BUFFER_KEY_UNIT.
+Buffers should be marked with GST_BUFFER_DELTA_UNIT when they're not
+key units instead, since key units are the more common case.</item>
+    </depreciations>
+  </api>
+
+  <bugs>
+  </bugs>
+
+</release>
